# trest_client

./: .gitignore  README.md  pyproject.toml  update_lib.py
.github/: release.yml
src/trest/: curl_converter.py  object_converter.py  rest_request.py  rest_response.py  utils.py
src/trest/configuration/: config.py
src/trest/utils/: __init__.py  logging_utils.py
tests/: mock_api_server.py  pytest.ini  test_basic.py  test_config.py  test_curl_converter.py  test_rest_request.py  test_rest_response.py
trest/: rest_request.py  rest_response.py
